--- a/radioinbrowser.html
+++ b/radioinbrowser.html
@@ -86,9 +86,10 @@
 
 		.wrapper {
 			display: grid;
-			grid-template-columns: repeat(3, 1fr);
+			/* grid-template-columns: repeat(3, 1fr); */
 			gap: 5px;
 			grid-auto-rows: minmax(100px, auto);
+			grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
 			margin-right: 10px;
 		}
 
