--- a/radioinbrowsersingle.html
+++ b/radioinbrowsersingle.html
@@ -88,11 +88,6 @@
 		}
 
 		.wrapper {
-			display: grid;
-			/* grid-template-columns: repeat(3, 1fr); */
-			gap: 5px;
-			grid-auto-rows: minmax(100px, auto);
-			grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
 			margin-right: 10px;
 		}
 		
@@ -101,6 +96,13 @@
 			display: inline-block;
 			padding: 0;
 			margin-left: 10px;
+			height: 100px;
+		}
+
+		.wrapper ul li {
+			display: inline-block;
+			margin: 5px;
+			margin-bottom: 15px;
 		}
 
 		.wrapper ul a {
@@ -108,6 +110,7 @@
 			border-radius: var(--main-radius);
 			padding: 5px 10px 5px 10px;
 			background: var(--accent-bg-color);
+			box-shadow: 0px 1px 3px 0px #888888;
 		}
 
 		.wrapper ul a:hover{
@@ -198,15 +201,15 @@
 		<div class="wrapper">
 			<div class="radio-list">
 				<ul>
-					<a onclick="krokodyl();">Krokodyl</a>
-					<a onclick="kiss();">KissHady</a>
-					<a onclick="free();">FreeRadio</a>
-					<a onclick="simulator();">Simulator</a>
-					<a onclick="simrock();">Simulator Rock</a>
-					<a onclick="simdance();">Simulator Dance</a>
-					<a onclick="evropa();">Evropa2</a>
-					<a onclick="beat();">Beat</a>
-					<a onclick="impuls();">Impuls</a>
+					<li><a onclick="krokodyl();">Krokodyl</a></li>
+					<li><a onclick="kiss();">KissHady</a></li>
+					<li><a onclick="free();">FreeRadio</a></li>
+					<li><a onclick="simulator();">Simulator</a></li>
+					<li><a onclick="simrock();">Simulator Rock</a></li>
+					<li><a onclick="simdance();">Simulator Dance</a></li>
+					<li><a onclick="evropa();">Evropa2</a></li>
+					<li><a onclick="beat();">Beat</a></li>
+					<li><a onclick="impuls();">Impuls</a></li>
 				</ul>
 			</div>
 
