--- a/radioinbrowsersingle.html
+++ b/radioinbrowsersingle.html
@@ -41,6 +41,7 @@
 			--main-text-color: black;
 			--main-text-font: Arial;
 			--main-radius: 3px;
+			--shadow-color: #222222;
 		}
 
 		body{
@@ -70,7 +71,7 @@
 			display: block;
 			height: 30px;
 			width: 100%;
-			box-shadow: 0px 1px 5px 0px #888888;
+			box-shadow: 0px 1px 5px 0px var(--shadow-color);
 		}
 
 		.header a{
@@ -110,7 +111,7 @@
 			border-radius: var(--main-radius);
 			padding: 5px 10px 5px 10px;
 			background: var(--accent-bg-color);
-			box-shadow: 0px 1px 3px 0px #888888;
+			box-shadow: 0px 1px 3px 0px var(--shadow-color);
 		}
 
 		.wrapper ul a:hover{
@@ -130,7 +131,7 @@
 			padding: 10px;
 			margin: 10px 10px 0 10px;
 			display: block;
-			box-shadow: 0px 1px 5px 0px #888888;
+			box-shadow: 0px 1px 5px 0px var(--shadow-color);
 		}
 
 		.player label{
@@ -141,6 +142,11 @@
 			display: block;
 			margin-right: auto;
 			margin-left: auto;
+			background: white;
+		}
+
+		.player audio::-webkit-media-controls-panel {
+			background: white;
 		}
 
 		.footer{
@@ -151,7 +157,7 @@
 			width: 100%;
 			text-align: center;
 			margin-top: 10px; 
-			box-shadow: 0px 1px 5px 0px #888888;
+			box-shadow: 0px 1px 5px 0px var(--shadow-color);
 			position: fixed;
 			bottom: 0;
 		}
