--- a/radioinbrowsersingle.html
+++ b/radioinbrowsersingle.html
@@ -254,7 +254,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<a onclick="themechange();" id="left">Radio</a>
+			<a onclick="alert('Verze 1.0');" id="left">Radio</a>
 			<select name="themechoice" id="themechoice" onchange="themechange();">
 				<option value="light" selected>Světlý</option>
 			 	<option value="dark">Tmavý</option>
