Added rockradio to the list

--- a/radioinbrowsersingle.html
+++ b/radioinbrowsersingle.html
@@ -284,6 +284,7 @@
 					<li><a onclick="simulator();">Simulator</a></li>
 					<li><a onclick="evropa();">Evropa2</a></li>
 					<li><a onclick="beat();">Beat</a></li>
+					<li><a onclick="rockradio();">Rockovy Radio</a></li>
 					<li><a onclick="impuls();">Impuls</a></li>
 					<li><a onclick="fajnradio();">Fajn Radio</a></li>
 					<li><a onclick="ceskyrozhlas();">Český Rozhlas</a></li>
